[package]
name = "mad_raffle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mad_raffle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.27.0", features = ["init-if-needed"]}
mpl-token-metadata = { version="1.7.0", features = [ "no-entrypoint" ] }
mpl-token-auth-rules = "1.0.0"
anchor-spl ={version = "0.27.0", features = ["metadata"]}
thiserror = "1.0.30"
solana-program = "1.14.17"
pyth-sdk-solana = "0.7.2"
# https://github.com/solana-labs/solana/issues/31428#issuecomment-1536509749
winnow = "=0.4.1"
